--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -96,7 +96,7 @@ body.is-preload *, body.is-preload *:before, body.is-preload *:after, body.is-re
 /* Type */
 body, input, select, textarea {
   color: #ffffff;
-  font-family: 'Comic Sans MS', 'Comic Sans', cursive;
+  font-family: "Courier New", Courier, monospace;
   font-size: 11pt;
   font-weight: 400;
   line-height: 1.65;
@@ -150,7 +150,7 @@ p {
 
 h1, h2, h3, h4, h5, h6 {
   color: #F4FF52;
-  font-family: 'Comic Sans MS', 'Comic Sans', cursive;
+  font-family: "Courier New", Courier, monospace;
   font-weight: 700;
   line-height: 1.5;
   margin: 0 0 0.8em 0;
@@ -162,13 +162,13 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 }
 
 h1 {
-  font-size: 4em;
+  font-size: 3em;
   margin: 0 0 0.4em 0;
   line-height: 1.3;
 }
 
 h2 {
-  font-size: 1.5em;
+  font-size: 2em;
 }
 
 h3 {
@@ -195,17 +195,17 @@ h6 {
 
 @media screen and (max-width: 980px) {
   h1 {
-    font-size: 2.25em;
+    font-size: 2.5em;
   }
 }
 
 @media screen and (max-width: 736px) {
   h1 {
-    font-size: 1.5em;
-    line-height: 1.4;
+    font-size: 3em;
+    line-height: 1.9;
   }
   h2 {
-    font-size: 1.2em;
+    font-size: 2em;
   }
 }
 
@@ -1393,9 +1393,9 @@ section.special, article.special {
 }
 
 header p {
-  font-family: 'Comic Sans MS', 'Comic Sans', cursive;
-  font-size: 0.9em;
-  font-weight: 400;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 1.2em;
+  font-weight: 700;
   letter-spacing: 0.05em;
   margin-top: -0.4em;
   text-transform: uppercase;
@@ -1832,22 +1832,22 @@ ul.icons li .icon:before {
 }
 
 ul.console-icons {
+
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 5px;
   list-style: none;
   padding: 0;
   margin: 0;
-}
-
-ul.console-icons li {
-  display: inline-block;
+  overflow: hidden; /* Prevent overflow */
+  flex-wrap: nowrap; /* Prevent wrapping */
 }
 
 ul.console-icons img {
-  width: 70px;
-  height: 70px;
+  width: 100%; /* Adjusts size relative to screen */
+  max-width: 50px; /* Optional: sets a reasonable max size */
+  height: auto; /* Keeps aspect ratio */
   object-fit: contain;
 }
 
@@ -2007,7 +2007,7 @@ table.alt tfoot {
   border-top: 0;
 }
 
-/* Button */
+/* Retro Button */
 input[type="submit"],
 input[type="reset"],
 input[type="button"],
@@ -2021,39 +2021,45 @@ button,
   -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
   -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-  background-color: transparent;
-  border-radius: 0.3em;
-  border: 0;
-  box-shadow: inset 0 0 0 1px #7E01FF;
+  background-color: #000;
+  border-radius: 0;
+  border: 2px solid #7E01FF;
+  box-shadow: 4px 4px 0 #7E01FF;
   color: #7E01FF !important;
   cursor: pointer;
   display: inline-block;
-  font-family: 'Comic Sans MS', 'Comic Sans', cursive;
-  font-size: 0.7em;
+  font-family: "Press Start 2P", monospace;
+  font-size: 0.8em;
   font-weight: 700;
-  height: 2.8em;
-  letter-spacing: 0.05em;
-  line-height: 2.8em;
-  padding: 0 1.8em;
+  height: 3em;
+  letter-spacing: 0.1em;
+  line-height: 3em;
+  padding: 0 2em;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
   white-space: nowrap;
 }
+
 input[type="submit"]:hover,
 input[type="reset"]:hover,
 input[type="button"]:hover,
 button:hover,
 .button:hover {
-  background-color: rgba(245, 106, 106, 0.05);
+  background-color: #7E01FF;
+  color: #000 !important;
+  box-shadow: 4px 4px 0 #fff;
 }
+
 input[type="submit"]:active,
 input[type="reset"]:active,
 input[type="button"]:active,
 button:active,
 .button:active {
-  background-color: rgba(245, 106, 106, 0.15);
+  background-color: #F4FF52;
+  box-shadow: 2px 2px 0 #fff;
 }
+
 input[type="submit"].icon:before,
 input[type="reset"].icon:before,
 input[type="button"].icon:before,
@@ -2061,6 +2067,7 @@ button.icon:before,
 .button.icon:before {
   margin-right: 0.4em;
 }
+
 input[type="submit"].fit,
 input[type="reset"].fit,
 input[type="button"].fit,
@@ -2068,6 +2075,7 @@ button.fit,
 .button.fit {
   width: 100%;
 }
+
 input[type="submit"].small,
 input[type="reset"].small,
 input[type="button"].small,
@@ -2075,15 +2083,17 @@ button.small,
 .button.small {
   font-size: 0.5em;
 }
+
 input[type="submit"].large,
 input[type="reset"].large,
 input[type="button"].large,
 button.large,
 .button.large {
-  font-size: 0.9em;
+  font-size: 2em;
   height: 3em;
   line-height: 3em;
 }
+
 input[type="submit"].primary,
 input[type="reset"].primary,
 input[type="button"].primary,
@@ -2093,6 +2103,7 @@ button.primary,
   box-shadow: none;
   color: #ffffff !important;
 }
+
 input[type="submit"].primary:hover,
 input[type="reset"].primary:hover,
 input[type="button"].primary:hover,
@@ -2100,6 +2111,7 @@ button.primary:hover,
 .button.primary:hover {
   background-color: #F4FF52;
 }
+
 input[type="submit"].primary:active,
 input[type="reset"].primary:active,
 input[type="button"].primary:active,
@@ -2107,6 +2119,7 @@ button.primary:active,
 .button.primary:active {
   background-color: #F4FF52;
 }
+
 input[type="submit"].disabled, input[type="submit"]:disabled,
 input[type="reset"].disabled,
 input[type="reset"]:disabled,
@@ -2119,6 +2132,7 @@ button:disabled,
   pointer-events: none;
   opacity: 0.25;
 }
+
 
 /* Mini Posts */
 .mini-posts article {
@@ -2447,6 +2461,9 @@ button:disabled,
   #main > .inner > section {
     padding: 0.8em 0 0.4em 0;
   }
+  ul.console-icons {
+    gap: 30px;
+  }
 }
 @media screen and (max-width: 1280px) {
   #main > .inner {
@@ -2455,6 +2472,9 @@ button:disabled,
   #main > .inner > section {
     padding: 0.6em 0 0.3em 0;
   }
+  ul.console-icons {
+    gap: 20px;
+  }
 }
 @media screen and (max-width: 736px) {
   #main > .inner {
@@ -2462,6 +2482,9 @@ button:disabled,
   }
   #main > .inner > section {
     padding: 0.4em 0 0.2em 0;
+  }
+  ul.console-icons {
+    gap: 5px;
   }
 }
 
@@ -2513,6 +2536,7 @@ button:disabled,
   position: relative;
   width: 30em;
   order: 1;
+  padding-left: 1.5em;
 }
 #sidebar h2 {
   font-size: 1.2em;
@@ -2592,8 +2616,10 @@ button:disabled,
 #header .logo {
   border-bottom: 0;
   color: inherit;
-  font-family: 'Comic Sans MS', 'Comic Sans', cursive;
+  font-family: "Courier New", Courier, monospace;
   font-size: 1em;
+  width: 10%
+
 }
 #header .icons {
   text-align: right;
@@ -2612,12 +2638,32 @@ button:disabled,
     margin: 0;
   }
   #header .icons {
-    height: 4em;
-    line-height: 4em;
+    height: 1em;
+    line-height: 1em;
     position: absolute;
     right: -0.5em;
     top: 0;
   }
+}
+
+@media (max-width: 768px) {
+  #header {
+    padding: 10px; /* Reduce padding on smaller screens */
+  }
+
+  .icons li {
+    margin-left: 5px; /* Tighten spacing between icons */
+  }
+
+  .logo img {
+    height: 40px; /* Slightly shrink logo */
+  }
+
+  .icons img {
+    margin-top: 2em;
+    height: 20px; /* Shrink icons for mobile */
+  }
+
 }
 
 /* Banner */
@@ -2627,12 +2673,14 @@ button:disabled,
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
+
 }
 #banner h1 {
 
   margin-top: 1em;
 }
 #banner .content {
+  order: 1; /* Content comes first */
   -moz-flex-grow: 1;
   -webkit-flex-grow: 1;
   -ms-flex-grow: 1;
@@ -2644,6 +2692,7 @@ button:disabled,
   width: 70%;
 }
 #banner .image {
+  order: 2; /* Video comes second */
   -moz-flex-grow: 0;
   -webkit-flex-grow: 0;
   -ms-flex-grow: 0;
@@ -2679,6 +2728,7 @@ button:disabled,
     display: none;
   }
   #banner .content {
+    padding: 5em 0 0.5em 0;
     -moz-flex-grow: 0;
     -webkit-flex-grow: 0;
     -ms-flex-grow: 0;
@@ -2727,7 +2777,7 @@ button:disabled,
   -ms-user-select: none;
   user-select: none;
   color: #FFFFFF;
-  font-family: 'Comic Sans MS', 'Comic Sans', cursive;
+  font-family: "Courier New", Courier, monospace;
   font-weight: 400;
   letter-spacing: 0.05em;
   list-style: none;
