--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2360,7 +2360,7 @@ button:disabled,
 }
 @media screen and (max-width: 1680px) {
   .posts article {
-    width: calc(33.33333%% - 2em);
+    width: calc(33.33333% - 2em);
   }
   .posts article:nth-last-child(3) {
     margin-bottom: 2em;
@@ -2486,6 +2486,8 @@ button:disabled,
   ul.console-icons {
     gap: 5px;
   }
+
+
 }
 
 /* Sidebar */
